# libkcapi

./: .gitignore  meson.build  meson_options.txt
apps/: app-internal.c  app-internal.h  kcapi-dgst.c  kcapi-enc.c  kcapi-hasher.c  kcapi-rng.c  meson.build
doc/: docproc.c  libkcapi.tmpl.in  libkcapi_man.tmpl.in  meson.build
doc/pdf/: meson.build
doc/ps/: meson.build
lib/: internal.h  kcapi-aead.c  kcapi-asym.c  kcapi-kdf.c  kcapi-kernel-if.c  kcapi-kpp.c  kcapi-md.c  kcapi-rng.c  kcapi-sym.c  kcapi-utils.c  kcapi.h  meson.build
scripts/: get_api_ver.sh  kcapi-hmac-link.sh  meson.build
speed-test/: cryptoperf-aead.c  cryptoperf-base.c  cryptoperf-hash.c  cryptoperf-main.c  cryptoperf-rng.c  cryptoperf-skcipher.c  cryptoperf.h  meson.build
test/: hasher-test.sh  kcapi-convenience.c  kcapi-enc-test-large.c  kcapi-main.c  meson.build  test.sh
